# sigel-tickets

./: .gitignore  README.md  pyproject.toml  requirements.txt
notifications/: manage.py  settings.py
notifications/apps/clients/: admin.py  models.py
notifications/apps/clients/migrations/: 0001_initial.py
notifications/apps/core/: admin.py  models.py
notifications/apps/core/management/commands/: init_db.py
notifications/apps/core/migrations/: 0001_initial.py  0002_coresettings_trello_board_id_and_more.py
notifications/apps/tickets/: admin.py  constants.py  models.py  slack.py  trello.py
notifications/apps/tickets/management/commands/: set_trello_label.py  sync_trello_labels.py
notifications/apps/tickets/migrations/: 0001_initial.py
